Flowmini/flowmini_v21_structural_bridge/examples/fail/bad_bool_init.flow
module bad_bool_init

main {
    flag : Bool(1)
}
